--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,27 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+@import "companies";
+@import url('https://fonts.googleapis.com/css?family=Cinzel');
+
+$brand-primary: black;
+
+html *
+{
+   font-family: 'Cinzel', serif;
+}
+
+ul {
+  list-style-type: none;
+}
+
+hr {
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
+}
