took out Amazon hard coded

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,4 +1,4 @@
-<div class='name'><%= @company['name'] %>Amazon</div>
+<div class='name'><%= @company['name'] %></div>
 <ul class='container grid-12-large well well-lg formula'>
   <div class='row'>
     <li class='part col-md-3'>
