--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -15,10 +15,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <form class="navbar-form navbar-left">
         <div class="form-group">
-          <%= form_tag("/companies", method: "get") do %>
-            <%= label_tag(:q, "Search for:") %>
-            <%= text_field_tag(:query) %>
-            <%= submit_tag("Search") %>
+          <%= simple_form_for @search, html: { class: 'form-horizontal' } do |f| %>
+            <%= f.input :query, label: false %>
+            <%= f.button :submit, 'Search' %>
           <% end %>
         </div>
       </form>
