added caching and styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+@import "common/_variables";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome-sprockets";
@@ -5,7 +6,7 @@
 @import "companies";
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 
-$brand-primary: black;
+$link-color: black;
 
 html *
 {
