--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -1,6 +1,21 @@
 .companies-container {
   margin: 0px 200px;
 
+  @media only screen and (max-width: 500px) {
+    margin: 0px 5px;
+  }
+
+  a {
+    background-color: white !important;
+    color: $brand-primary !important;
+  }
+
+  .row:hover {
+    box-shadow: 1px 1px 15px $brand-primary;
+    background-color: white;
+    border-radius: 5px;
+  }
+
   .company {
     background-color: white;
     color: $brand-primary;
@@ -11,6 +26,12 @@
 .part {
   border: 1px solid grey;
   text-align: center;
+  font-size: 140%;
+
+  .data-point {
+    display: inline;
+    margin-right: 10px;
+  }
 }
 
 .operator {
@@ -18,26 +39,48 @@
   font-size: 30px;
   position: relative;
   top: 28px;
+  color: #9e9e9e;
 
-  @media only screen and (max-width: 500px) {
+  @media only screen and (max-width: 990px) {
     top: 0;
+  }
+}
+
+.equals {
+  font-size: 360%;
+  top: 18px;
+
+  @media only screen and (max-width: 990px) {
+    top: -10;
   }
 }
 
 .answer {
   text-align: center;
+
+  @media only screen and (max-width: 990px) {
+    font-size: 4.5vw;
+  }
+
+  @media only screen and (max-width: 500px) {
+    font-size: 5.5vw;
+  }
 }
 
-.data-point {
-  font-size: 12px;
-  display: inline;
-  margin-right: 10px;
-}
-
-.formula {
+.formula-container {
   width: 90%;
   display: block;
   margin: 0px auto;
+
+  .formula {
+    position: relative;
+    left: 4%;
+
+    @media only screen and (max-width: 990px) {
+      position: relative;
+      left: 0%;
+    }
+  }
 }
 
 .name {
