--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,8 +1,8 @@
 <div class='companies-container'>
   <h1>Companies list</h1>
   <% @companies.each do |company| %>
-    <div class="list-group">
-      <%= link_to company_path(company['ticker']), class: 'company list-group-item active' do %>
+    <div class="list-group row">
+      <%= link_to company_path(company['ticker']), class: 'company list-group-item active col-sm-12' do %>
         <h4 class="list-group-item-heading"><%= company['name'] %></h4>
       <% end %>
     </div>
