--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,10 +1,14 @@
 <div class='companies-container'>
   <h1>Companies list</h1>
-  <% @companies.each do |company| %>
-    <div class="list-group row">
-      <%= link_to company_path(company['ticker']), class: 'company list-group-item active col-sm-12' do %>
-        <h4 class="list-group-item-heading"><%= company['name'] %></h4>
-      <% end %>
-    </div>
+  <% if @companies.any? %>
+    <% @companies.each do |company| %>
+      <div class="list-group row">
+        <%= link_to company_path(company['ticker']), class: 'company list-group-item active col-sm-12' do %>
+          <h4 class="list-group-item-heading"><%= company['name'] %></h4>
+        <% end %>
+      </div>
+    <% end %>
+  <% else %>
+    <h4>There are no available companies from your search</h4>
   <% end %>
 </div>
